--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,14 @@
 {% block page_content %}
 <div class="page_content">
     <div class="row">
-        <div class="col-lg-6">
+        <div class='col-xs-4 col-md-offset-4'>
+            <a href="#" class="thumbnail">
+                <img src="../static/timg.jpg" alt="byr search engine">
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-6 col-md-offset-3">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search for...">
                 <span class="input-group-btn">
@@ -13,6 +20,6 @@
                 </span>
             </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
-    </div><!-- /.row -->
+    </div>
 </div>
 {% endblock %}
