--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 <div class="page_content">
     <div class="row">
         <div class='col-xs-4 col-md-offset-4'>
-            <a href="#" class="thumbnail">
-                <img src="../static/timg.jpg" alt="byr search engine">
+            <a href="/" class="thumbnail">
+                <img src={{ url_for('static',filename='timg.jpg') }} alt="byr search engine">
             </a>
         </div>
     </div>
