--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,17 @@
             </a>
         </div>
     </div>
-    <div class="row">
-        <div class="col-xs-6 col-md-offset-3">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                </span>
-            </div><!-- /input-group -->
-        </div><!-- /.col-lg-6 -->
-    </div>
+    <form method="POST">
+    	<div class="row">
+        	<div class="col-xs-6 col-md-offset-3">
+            	<div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for..." name='search'>
+                    <span class="input-group-btn">
+                        <button type="submit" class="btn btn-default" type="button">Go!</button>
+                    </span>
+            	</div><!-- /input-group -->
+        	</div><!-- /.col-lg-6 -->
+    	</div>
+    </form>
 </div>
 {% endblock %}
