--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block page_content %}
 <div class="page_content">
     <div class="row">
-        <div class='col-xs-4 col-md-offset-4'>
+        <div class='col-md-4 col-md-offset-4'>
             <a href="/" class="thumbnail">
                 <img src={{ url_for('static',filename='timg.jpg') }} alt="byr search engine">
             </a>
@@ -13,7 +13,7 @@
     </div>
     <form method="POST">
     	<div class="row">
-        	<div class="col-xs-6 col-md-offset-3">
+        	<div class="col-md-6 col-md-offset-3">
             	<div class="input-group">
                     <input type="text" class="form-control" placeholder="Search for..." name='search'>
                     <span class="input-group-btn">
